Feat Delete Ticket By Event Id
